apps/base/immich/machine-learning-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: apps
  labels:
    app: immich
    role: machine-learning
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: immich
      role: machine-learning
  template:
    metadata:
      labels:
        app: immich
        role: machine-learning
    spec:
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:v3.2.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
          resources:
            requests:
              cpu: "1"
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 2Gi
          volumeMounts:
            - name: cache
              mountPath: /cache
      volumes:
        - name: cache
          emptyDir: {}
