apps/base/immich/servers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-servers
  namespace: apps
  labels:
    app: immich
    role: servers
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: immich
      role: servers
  template:
    metadata:
      labels:
        app: immich
        role: servers
    spec:
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:v3.3.1
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 2Gi
          ports:
            - containerPort: 2283
          volumeMounts:
            - name: library
              mountPath: /usr/src/app/upload
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: immich-pvc-nfs
