apps/base/immich/machine-learning-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: apps
  labels:
    app: immich
    role: machine-learning
spec:
  type: ClusterIP
  selector:
    app: immich
    role: machine-learning
  ports:
    - name: http
      port: 3003
      targetPort: 3003
