apps/base/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-service
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: immich-servers
  ports:
    - port: 2283
      targetPort: 2283
