apps/base/immich/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.ysonsbaolab.dev`)
      kind: Rule
      services:
        - name: immich-service
          port: 2283
  tls:
    secretName: immich-certificate-secret
